--- a/fruitModel.ipynb
+++ b/fruitModel.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "train_dir = r\"C:\\Users\\hanna\\Desktop\\fruit recognition\\fruitSplit\\train\"\r\n",
+    "train_dir = r\"C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\fruitSplit\\train\"\r\n",
     "train_gen = training_datagen.flow_from_directory(train_dir, #directory containing various fruits\r\n",
     "                                                target_size=(150, 150), # all images will be resized to 150, 150 when it is loaded\r\n",
     "                                                class_mode=\"categorical\") #categorial because of multi-class classification. \r\n",
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "val_dir = r\"C:\\Users\\hanna\\Desktop\\fruit recognition\\fruitSplit\\val\"\r\n",
+    "val_dir = r\"C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\fruitSplit\\val\"\r\n",
     "val_gen = validation_datagen.flow_from_directory(val_dir, #directory containing various fruits\r\n",
     "                                                target_size=(150, 150), # all images will be resized to 150, 150 when it is loaded\r\n",
     "                                                class_mode=\"categorical\")"
@@ -83,14 +83,14 @@
    ],
    "source": [
     "# apple directory\r\n",
-    "train_apple_dir = r\"C:\\Users\\hanna\\Desktop\\fruit recognition\\fruitSplit\\train\\Apple\"\r\n",
+    "train_apple_dir = r\"C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\fruitSplit\\train\\Apple\"\r\n",
     "\r\n",
     "# printing the number of apples in train dataset\r\n",
     "number_apples_train = len(os.listdir(train_apple_dir))\r\n",
     "print(\"total training apple images:\", number_apples_train)\r\n",
     "\r\n",
     "#banana directory\r\n",
-    "train_banana_dir = r\"C:\\Users\\hanna\\Desktop\\fruit recognition\\fruitSplit\\train\\Banana\"\r\n",
+    "train_banana_dir = r\"C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\fruitSplit\\train\\Banana\"\r\n",
     "\r\n",
     "# printing the number of bananas in train dataset\r\n",
     "number_banana_train = len(os.listdir(train_banana_dir))\r\n",
@@ -161,6 +161,96 @@
     "    plt.imshow(img)\r\n",
     "    \r\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.Sequential([\r\n",
+    "    # first convolution\r\n",
+    "    tf.keras.layers.Conv2D(64, (3,3), activation=\"relu\", input_shape=(150,150, 3)),\r\n",
+    "    tf.keras.layers.MaxPooling2D(2,2),\r\n",
+    "    # second convolution\r\n",
+    "    tf.keras.layers.Conv2D(64, (3,3), activation=\"relu\"),\r\n",
+    "    tf.keras.layers.MaxPooling2D(2,2),\r\n",
+    "    # third convolution layer\r\n",
+    "    tf.keras.layers.Conv2D(128, (3,3), activation=\"relu\"),\r\n",
+    "    tf.keras.layers.MaxPooling2D(2,2),\r\n",
+    "    # fourth convolution layer\r\n",
+    "    tf.keras.layers.Conv2D(128, (3,3), activation=\"relu\"),\r\n",
+    "    tf.keras.layers.MaxPooling2D(2,2),\r\n",
+    "    # flatten before feeding into Dense neural network. \r\n",
+    "    tf.keras.layers.Flatten(),\r\n",
+    "    # 512 neurons in the hidden layer\r\n",
+    "    tf.keras.layers.Dense(512, activation=\"relu\"),\r\n",
+    "    # 15 = 15 different categories\r\n",
+    "    # softmas takes a set of values and effectively picks the biggest one. for example if the output layer has\r\n",
+    "    # [0.1,0.1,0.5,0.2,0.1], it will take it and turn it into [0,0,1,0,0]\r\n",
+    "    tf.keras.layers.Dense(15, activation=\"softmax\")\r\n",
+    "]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\r\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# implementing a callback function to terminate training once training reaches 98% accuracy for validation data\r\n",
+    "\r\n",
+    "validation_accuracy = 0.98\r\n",
+    "\r\n",
+    "class myCallback(tf.keras.callbacks.Callback):\r\n",
+    "    def on_epoch_end(self, epoch, logs={}):\r\n",
+    "        if(logs.get(\"val_acc\") >= validation_accuracy):\r\n",
+    "            print(\"\\nReached desired validation accuracy, so cancelling training\")\r\n",
+    "            self.model.stop_training=True\r\n",
+    "            \r\n",
+    "callbacks = myCallback()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss = \"categorical_crossentropy\", optimizer='rmsprop', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruit_model = model.fit(train_gen, epochs=100, validation_data=val_gen, verbose=1, \r\n",
+    "                                  callbacks = [callbacks], workers=10)\r\n",
+    "\r\n",
+    "filepath = r\"C:\\Users\\Samsung\\Desktop\\fruit_classification\\fruit_project\\project_fruit\\saved_model\"\r\n",
+    "tf.keras.models.save_model(\r\n",
+    "    model,\r\n",
+    "    filepath,\r\n",
+    "    overwrite=True,\r\n",
+    "    include_optimizer=True,\r\n",
+    "    save_format=\"tf\",\r\n",
+    "    signatures=None\r\n",
+    ")\r\n",
+    "\r\n",
+    "model.save(\"fruit.h5\")"
    ]
   }
  ],
