--- a/fruitModel.ipynb
+++ b/fruitModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -99,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['79Banana02063.png',\n '87Banana02109.png',\n 'Banana01.png',\n 'Banana010.png',\n 'Banana0100.png',\n 'Banana01001.png',\n 'Banana01002.png',\n 'Banana01004.png',\n 'Banana01006.png',\n 'Banana01007.png']"
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,8 @@
     "    # 15 = 15 different categories\r\n",
     "    # softmas takes a set of values and effectively picks the biggest one. for example if the output layer has\r\n",
     "    # [0.1,0.1,0.5,0.2,0.1], it will take it and turn it into [0,0,1,0,0]\r\n",
-    "    tf.keras.layers.Dense(15, activation=\"softmax\")\r\n",
+    "    tf.keras.layers.Dense(3, activation=\"softmax\")\r\n",
+    "    #tf.keras.layers.Dense(15, activation=\"softmax\")\r\n",
     "]);"
    ]
   },
@@ -197,9 +198,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_8 (Conv2D)            (None, 148, 148, 64)      1792      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_8 (MaxPooling2 (None, 74, 74, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_9 (Conv2D)            (None, 72, 72, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_9 (MaxPooling2 (None, 36, 36, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_10 (Conv2D)           (None, 34, 34, 128)       73856     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_10 (MaxPooling (None, 17, 17, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_11 (Conv2D)           (None, 15, 15, 128)       147584    \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_11 (MaxPooling (None, 7, 7, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_2 (Flatten)          (None, 6272)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 512)               3211776   \n",
+      "_________________________________________________________________\n",
+      "dense_5 (Dense)              (None, 3)                 1539      \n",
+      "=================================================================\n",
+      "Total params: 3,473,475\n",
+      "Trainable params: 3,473,475\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "\r\n",
     "model.summary()"
    ]
   },
@@ -215,7 +252,7 @@
     "\r\n",
     "class myCallback(tf.keras.callbacks.Callback):\r\n",
     "    def on_epoch_end(self, epoch, logs={}):\r\n",
-    "        if(logs.get(\"val_acc\") >= validation_accuracy):\r\n",
+    "        if(logs.get(\"val_accuracy\") is not None and logs.get(\"val_accuracy\") >= validation_accuracy):\r\n",
     "            print(\"\\nReached desired validation accuracy, so cancelling training\")\r\n",
     "            self.model.stop_training=True\r\n",
     "            \r\n",
@@ -233,14 +270,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "349/349 [==============================] - 432s 1s/step - loss: 0.3248 - accuracy: 0.8765 - val_loss: 0.0522 - val_accuracy: 0.9833\n",
+      "Epoch 2/100\n",
+      "349/349 [==============================] - 408s 1s/step - loss: 0.1954 - accuracy: 0.9703 - val_loss: 0.0541 - val_accuracy: 0.9820\n",
+      "Epoch 3/100\n",
+      "349/349 [==============================] - 419s 1s/step - loss: 0.1059 - accuracy: 0.9785 - val_loss: 0.1332 - val_accuracy: 0.9691\n",
+      "Epoch 4/100\n",
+      "349/349 [==============================] - 403s 1s/step - loss: 0.1059 - accuracy: 0.9814 - val_loss: 0.0329 - val_accuracy: 0.9875\n",
+      "Epoch 5/100\n",
+      "349/349 [==============================] - 423s 1s/step - loss: 0.0774 - accuracy: 0.9857 - val_loss: 0.0195 - val_accuracy: 0.9971\n",
+      "Epoch 6/100\n",
+      "349/349 [==============================] - 399s 1s/step - loss: 0.0889 - accuracy: 0.9861 - val_loss: 0.0120 - val_accuracy: 0.9950\n",
+      "Epoch 7/100\n",
+      "349/349 [==============================] - 411s 1s/step - loss: 0.0931 - accuracy: 0.9846 - val_loss: 0.1552 - val_accuracy: 0.9435\n",
+      "Epoch 8/100\n",
+      "349/349 [==============================] - 401s 1s/step - loss: 0.1474 - accuracy: 0.9859 - val_loss: 0.0062 - val_accuracy: 0.9979\n",
+      "Epoch 9/100\n",
+      "349/349 [==============================] - 381s 1s/step - loss: 0.1327 - accuracy: 0.9896 - val_loss: 0.0313 - val_accuracy: 0.9887\n",
+      "Epoch 10/100\n",
+      "349/349 [==============================] - 375s 1s/step - loss: 0.0911 - accuracy: 0.9906 - val_loss: 0.0241 - val_accuracy: 0.9925\n",
+      "Epoch 11/100\n",
+      "349/349 [==============================] - 430s 1s/step - loss: 0.0860 - accuracy: 0.9894 - val_loss: 0.0190 - val_accuracy: 0.9950\n",
+      "Epoch 12/100\n",
+      "  9/349 [..............................] - ETA: 6:34 - loss: 1.9773e-04 - accuracy: 1.0000"
+     ]
+    }
+   ],
    "source": [
     "fruit_model = model.fit(train_gen, epochs=100, validation_data=val_gen, verbose=1, \r\n",
     "                                  callbacks = [callbacks], workers=10)\r\n",
     "\r\n",
-    "filepath = r\"C:\\Users\\Samsung\\Desktop\\fruit_classification\\fruit_project\\project_fruit\\saved_model\"\r\n",
+    "filepath = r\"C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\model\"\r\n",
     "tf.keras.models.save_model(\r\n",
     "    model,\r\n",
     "    filepath,\r\n",
@@ -256,8 +324,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit ('fruit_recognition-yvhTsC1M': virtualenvwrapper)",
-   "name": "python379jvsc74a57bd07d23a6fadc9e8c26e001651b4f179e178e1a97351569d6ea3045b162fb99690e"
+   "display_name": "Python 3.7.9 64-bit ('FruitRecognition-0gOXzYKb': pipenv)",
+   "name": "python379jvsc74a57bd0ada95b7aa760c7ebc72eb3c8df3846e63d172e26ec59dab7d388de2df4652aa1"
   },
   "language_info": {
    "codemirror_mode": {
@@ -273,7 +341,7 @@
   },
   "metadata": {
    "interpreter": {
-    "hash": "7d23a6fadc9e8c26e001651b4f179e178e1a97351569d6ea3045b162fb99690e"
+    "hash": "ada95b7aa760c7ebc72eb3c8df3846e63d172e26ec59dab7d388de2df4652aa1"
    }
   },
   "orig_nbformat": 2
