--- a/fruitModel.ipynb
+++ b/fruitModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -99,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['79Banana02063.png',\n '87Banana02109.png',\n 'Banana01.png',\n 'Banana010.png',\n 'Banana0100.png',\n 'Banana01001.png',\n 'Banana01002.png',\n 'Banana01004.png',\n 'Banana01006.png',\n 'Banana01007.png']"
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,38 +196,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_8 (Conv2D)            (None, 148, 148, 64)      1792      \n",
+      "conv2d (Conv2D)              (None, 148, 148, 64)      1792      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_8 (MaxPooling2 (None, 74, 74, 64)        0         \n",
+      "max_pooling2d (MaxPooling2D) (None, 74, 74, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_9 (Conv2D)            (None, 72, 72, 64)        36928     \n",
+      "conv2d_1 (Conv2D)            (None, 72, 72, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_9 (MaxPooling2 (None, 36, 36, 64)        0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 36, 36, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_10 (Conv2D)           (None, 34, 34, 128)       73856     \n",
+      "conv2d_2 (Conv2D)            (None, 34, 34, 128)       73856     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_10 (MaxPooling (None, 17, 17, 128)       0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 17, 17, 128)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_11 (Conv2D)           (None, 15, 15, 128)       147584    \n",
+      "conv2d_3 (Conv2D)            (None, 15, 15, 128)       147584    \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_11 (MaxPooling (None, 7, 7, 128)         0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 7, 7, 128)         0         \n",
       "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 6272)              0         \n",
+      "flatten (Flatten)            (None, 6272)              0         \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 512)               3211776   \n",
+      "dense (Dense)                (None, 512)               3211776   \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 3)                 1539      \n",
+      "dense_1 (Dense)              (None, 3)                 1539      \n",
       "=================================================================\n",
       "Total params: 3,473,475\n",
       "Trainable params: 3,473,475\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -278,29 +278,14 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "349/349 [==============================] - 432s 1s/step - loss: 0.3248 - accuracy: 0.8765 - val_loss: 0.0522 - val_accuracy: 0.9833\n",
+      "349/349 [==============================] - 517s 1s/step - loss: 0.4325 - accuracy: 0.8554 - val_loss: 0.1007 - val_accuracy: 0.9619\n",
       "Epoch 2/100\n",
-      "349/349 [==============================] - 408s 1s/step - loss: 0.1954 - accuracy: 0.9703 - val_loss: 0.0541 - val_accuracy: 0.9820\n",
+      "349/349 [==============================] - 525s 1s/step - loss: 0.1169 - accuracy: 0.9627 - val_loss: 0.0562 - val_accuracy: 0.9795\n",
       "Epoch 3/100\n",
-      "349/349 [==============================] - 419s 1s/step - loss: 0.1059 - accuracy: 0.9785 - val_loss: 0.1332 - val_accuracy: 0.9691\n",
-      "Epoch 4/100\n",
-      "349/349 [==============================] - 403s 1s/step - loss: 0.1059 - accuracy: 0.9814 - val_loss: 0.0329 - val_accuracy: 0.9875\n",
-      "Epoch 5/100\n",
-      "349/349 [==============================] - 423s 1s/step - loss: 0.0774 - accuracy: 0.9857 - val_loss: 0.0195 - val_accuracy: 0.9971\n",
-      "Epoch 6/100\n",
-      "349/349 [==============================] - 399s 1s/step - loss: 0.0889 - accuracy: 0.9861 - val_loss: 0.0120 - val_accuracy: 0.9950\n",
-      "Epoch 7/100\n",
-      "349/349 [==============================] - 411s 1s/step - loss: 0.0931 - accuracy: 0.9846 - val_loss: 0.1552 - val_accuracy: 0.9435\n",
-      "Epoch 8/100\n",
-      "349/349 [==============================] - 401s 1s/step - loss: 0.1474 - accuracy: 0.9859 - val_loss: 0.0062 - val_accuracy: 0.9979\n",
-      "Epoch 9/100\n",
-      "349/349 [==============================] - 381s 1s/step - loss: 0.1327 - accuracy: 0.9896 - val_loss: 0.0313 - val_accuracy: 0.9887\n",
-      "Epoch 10/100\n",
-      "349/349 [==============================] - 375s 1s/step - loss: 0.0911 - accuracy: 0.9906 - val_loss: 0.0241 - val_accuracy: 0.9925\n",
-      "Epoch 11/100\n",
-      "349/349 [==============================] - 430s 1s/step - loss: 0.0860 - accuracy: 0.9894 - val_loss: 0.0190 - val_accuracy: 0.9950\n",
-      "Epoch 12/100\n",
-      "  9/349 [..............................] - ETA: 6:34 - loss: 1.9773e-04 - accuracy: 1.0000"
+      "349/349 [==============================] - 475s 1s/step - loss: 0.0856 - accuracy: 0.9776 - val_loss: 0.0095 - val_accuracy: 0.9983\n",
+      "\n",
+      "Reached desired validation accuracy, so cancelling training\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\model\\assets\n"
      ]
     }
    ],
@@ -318,7 +303,64 @@
     "    signatures=None\r\n",
     ")\r\n",
     "\r\n",
-    "model.save(\"fruit.h5\")"
+    "model.save(\"fruit.h5\")\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpc9c0tcbk\\assets\n",
+      "WARNING:tensorflow:From C:\\Users\\hanna\\.virtualenvs\\FruitRecognition-0gOXzYKb\\lib\\site-packages\\tensorflow\\lite\\python\\convert_saved_model.py:60: load (from tensorflow.python.saved_model.loader_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This function will only be available through the v1 compatibility library as tf.compat.v1.saved_model.loader.load or tf.compat.v1.saved_model.load. There will be a new function for importing SavedModels in Tensorflow 2.0.\n",
+      "INFO:tensorflow:Restoring parameters from C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpc9c0tcbk\\variables\\variables\n",
+      "INFO:tensorflow:The given SavedModel MetaGraphDef contains SignatureDefs with the following keys: {'__saved_model_init_op', 'serving_default'}\n",
+      "INFO:tensorflow:input tensors info: \n",
+      "INFO:tensorflow:Tensor's key in saved_model's tensor_map: conv2d_input\n",
+      "INFO:tensorflow: tensor name: serving_default_conv2d_input:0, shape: (-1, 150, 150, 3), type: DT_FLOAT\n",
+      "INFO:tensorflow:output tensors info: \n",
+      "INFO:tensorflow:Tensor's key in saved_model's tensor_map: dense_1\n",
+      "INFO:tensorflow: tensor name: StatefulPartitionedCall:0, shape: (-1, 3), type: DT_FLOAT\n",
+      "INFO:tensorflow:Restoring parameters from C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpc9c0tcbk\\variables\\variables\n",
+      "WARNING:tensorflow:From C:\\Users\\hanna\\.virtualenvs\\FruitRecognition-0gOXzYKb\\lib\\site-packages\\tensorflow\\lite\\python\\util.py:300: convert_variables_to_constants (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.convert_variables_to_constants`\n",
+      "WARNING:tensorflow:From C:\\Users\\hanna\\.virtualenvs\\FruitRecognition-0gOXzYKb\\lib\\site-packages\\tensorflow\\python\\framework\\convert_to_constants.py:857: extract_sub_graph (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.extract_sub_graph`\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'History' object has no attribute 'export'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-741f6ec184af>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m   \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtflite_model\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m   \u001b[0mfruit_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexport\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'nowyModel.tflite'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'label.txt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'History' object has no attribute 'export'"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the model.\r\n",
+    "converter = tf.compat.v1.lite.TFLiteConverter.from_keras_model_file('fruit.h5')\r\n",
+    "tflite_model = converter.convert()\r\n",
+    "\r\n",
+    "# Save the model.\r\n",
+    "with open('model.tflite', 'wb') as f:\r\n",
+    "  f.write(tflite_model)\r\n",
+    "\r\n",
+    "  "
    ]
   }
  ],
