--- a/fruitModel.ipynb
+++ b/fruitModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "train_dir = r\"C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\fruitSplit\\train\"\r\n",
+    "train_dir = r\"fruitSplit\\train\"\r\n",
     "train_gen = training_datagen.flow_from_directory(train_dir, #directory containing various fruits\r\n",
     "                                                target_size=(150, 150), # all images will be resized to 150, 150 when it is loaded\r\n",
     "                                                class_mode=\"categorical\") #categorial because of multi-class classification. \r\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "val_dir = r\"C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\fruitSplit\\val\"\r\n",
+    "val_dir = r\"fruitSplit\\val\"\r\n",
     "val_gen = validation_datagen.flow_from_directory(val_dir, #directory containing various fruits\r\n",
     "                                                target_size=(150, 150), # all images will be resized to 150, 150 when it is loaded\r\n",
     "                                                class_mode=\"categorical\")"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -83,14 +83,14 @@
    ],
    "source": [
     "# apple directory\r\n",
-    "train_apple_dir = r\"C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\fruitSplit\\train\\Apple\"\r\n",
+    "train_apple_dir = r\"fruitSplit\\train\\Apple\"\r\n",
     "\r\n",
     "# printing the number of apples in train dataset\r\n",
     "number_apples_train = len(os.listdir(train_apple_dir))\r\n",
     "print(\"total training apple images:\", number_apples_train)\r\n",
     "\r\n",
     "#banana directory\r\n",
-    "train_banana_dir = r\"C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\fruitSplit\\train\\Banana\"\r\n",
+    "train_banana_dir = r\"fruitSplit\\train\\Banana\"\r\n",
     "\r\n",
     "# printing the number of bananas in train dataset\r\n",
     "number_banana_train = len(os.listdir(train_banana_dir))\r\n",
@@ -293,7 +293,7 @@
     "fruit_model = model.fit(train_gen, epochs=100, validation_data=val_gen, verbose=1, \r\n",
     "                                  callbacks = [callbacks], workers=10)\r\n",
     "\r\n",
-    "filepath = r\"C:\\Users\\hanna\\Desktop\\FruitRecognition\\FruitRecognition\\model\"\r\n",
+    "filepath = r\"model\"\r\n",
     "tf.keras.models.save_model(\r\n",
     "    model,\r\n",
     "    filepath,\r\n",
