--- a/fruitModel.ipynb
+++ b/fruitModel.ipynb
@@ -290,7 +290,8 @@
     }
    ],
    "source": [
-    "fruit_model = model.fit(train_gen, epochs=100, validation_data=val_gen, verbose=1, \r\n",
+    "with tf.device('/gpu:0'):",
+    "    fruit_model = model.fit(train_gen, epochs=100, validation_data=val_gen, verbose=1, \r\n",
     "                                  callbacks = [callbacks], workers=10)\r\n",
     "\r\n",
     "filepath = r\"model\"\r\n",
