--- a/fruitModel.ipynb
+++ b/fruitModel.ipynb
@@ -340,7 +340,38 @@
      "text": [
       "Epoch 1/100\n",
       "   6/1488 [..............................] - ETA: 3:55 - loss: 3.6134 - accuracy: 0.1406WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0558s vs `on_train_batch_end` time: 0.0863s). Check your callbacks.\n",
-      " 393/1488 [======>.......................] - ETA: 2:47 - loss: 1.2882 - accuracy: 0.5949"
+      "1488/1488 [==============================] - 256s 170ms/step - loss: 0.5703 - accuracy: 0.8203 - val_loss: 0.1237 - val_accuracy: 0.9543\n",
+      "Epoch 2/100\n",
+      "1488/1488 [==============================] - 252s 169ms/step - loss: 0.1617 - accuracy: 0.9521 - val_loss: 0.1091 - val_accuracy: 0.9648\n",
+      "Epoch 3/100\n",
+      "1488/1488 [==============================] - 253s 170ms/step - loss: 0.1622 - accuracy: 0.9624 - val_loss: 0.1131 - val_accuracy: 0.9715\n",
+      "Epoch 4/100\n",
+      "1488/1488 [==============================] - 258s 173ms/step - loss: 0.4756 - accuracy: 0.9643 - val_loss: 0.1860 - val_accuracy: 0.9526\n",
+      "Epoch 5/100\n",
+      "1488/1488 [==============================] - 255s 171ms/step - loss: 0.1630 - accuracy: 0.9693 - val_loss: 0.4708 - val_accuracy: 0.9437\n",
+      "Epoch 6/100\n",
+      "1488/1488 [==============================] - 256s 172ms/step - loss: 0.1793 - accuracy: 0.9724 - val_loss: 0.2781 - val_accuracy: 0.9623\n",
+      "Epoch 7/100\n",
+      "1488/1488 [==============================] - 259s 174ms/step - loss: 0.1901 - accuracy: 0.9741 - val_loss: 0.2787 - val_accuracy: 0.9608\n",
+      "Epoch 8/100\n",
+      "1488/1488 [==============================] - 255s 171ms/step - loss: 0.1675 - accuracy: 0.9756 - val_loss: 0.1763 - val_accuracy: 0.9672\n",
+      "Epoch 9/100\n",
+      "1488/1488 [==============================] - 254s 170ms/step - loss: 0.2071 - accuracy: 0.9779 - val_loss: 0.1662 - val_accuracy: 0.9773\n",
+      "Epoch 10/100\n",
+      "1488/1488 [==============================] - 254s 170ms/step - loss: 0.1642 - accuracy: 0.9792 - val_loss: 0.3603 - val_accuracy: 0.9379\n",
+      "Epoch 11/100\n",
+      "1488/1488 [==============================] - 257s 172ms/step - loss: 0.2055 - accuracy: 0.9804 - val_loss: 0.4229 - val_accuracy: 0.9503\n",
+      "Epoch 12/100\n",
+      "1488/1488 [==============================] - 256s 171ms/step - loss: 0.1876 - accuracy: 0.9822 - val_loss: 0.1495 - val_accuracy: 0.9770\n",
+      "Epoch 13/100\n",
+      "1488/1488 [==============================] - 252s 169ms/step - loss: 0.1903 - accuracy: 0.9843 - val_loss: 0.3507 - val_accuracy: 0.9774\n",
+      "Epoch 14/100\n",
+      "1488/1488 [==============================] - 251s 168ms/step - loss: 0.1905 - accuracy: 0.9853 - val_loss: 0.2786 - val_accuracy: 0.9727\n",
+      "Epoch 15/100\n",
+      "1488/1488 [==============================] - 254s 170ms/step - loss: 0.2124 - accuracy: 0.9853 - val_loss: 0.2493 - val_accuracy: 0.9826\n",
+      "\n",
+      "Reached desired validation accuracy, so cancelling training\n",
+      "INFO:tensorflow:Assets written to: modelA\\assets\n"
      ]
     }
    ],
@@ -364,160 +395,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpa0abuitj\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpa0abuitj\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpa0abuitj\\variables\\variables\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpa0abuitj\\variables\\variables\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:The given SavedModel MetaGraphDef contains SignatureDefs with the following keys: {'__saved_model_init_op', 'serving_default'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:The given SavedModel MetaGraphDef contains SignatureDefs with the following keys: {'__saved_model_init_op', 'serving_default'}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:input tensors info: \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:input tensors info: \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Tensor's key in saved_model's tensor_map: conv2d_input\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Tensor's key in saved_model's tensor_map: conv2d_input\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow: tensor name: serving_default_conv2d_input:0, shape: (-1, 150, 150, 3), type: DT_FLOAT\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow: tensor name: serving_default_conv2d_input:0, shape: (-1, 150, 150, 3), type: DT_FLOAT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:output tensors info: \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:output tensors info: \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Tensor's key in saved_model's tensor_map: dense_1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Tensor's key in saved_model's tensor_map: dense_1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow: tensor name: StatefulPartitionedCall:0, shape: (-1, 26), type: DT_FLOAT\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow: tensor name: StatefulPartitionedCall:0, shape: (-1, 26), type: DT_FLOAT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpa0abuitj\\variables\\variables\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpa0abuitj\\variables\\variables\n"
+      "INFO:tensorflow:Assets written to: C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpygpluamc\\assets\n",
+      "WARNING:tensorflow:From C:\\Users\\hanna\\.virtualenvs\\FruitRecognition-0gOXzYKb\\lib\\site-packages\\tensorflow\\lite\\python\\convert_saved_model.py:60: load (from tensorflow.python.saved_model.loader_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This function will only be available through the v1 compatibility library as tf.compat.v1.saved_model.loader.load or tf.compat.v1.saved_model.load. There will be a new function for importing SavedModels in Tensorflow 2.0.\n",
+      "INFO:tensorflow:Restoring parameters from C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpygpluamc\\variables\\variables\n",
+      "INFO:tensorflow:The given SavedModel MetaGraphDef contains SignatureDefs with the following keys: {'serving_default', '__saved_model_init_op'}\n",
+      "INFO:tensorflow:input tensors info: \n",
+      "INFO:tensorflow:Tensor's key in saved_model's tensor_map: conv2d_4_input\n",
+      "INFO:tensorflow: tensor name: serving_default_conv2d_4_input:0, shape: (-1, 150, 150, 3), type: DT_FLOAT\n",
+      "INFO:tensorflow:output tensors info: \n",
+      "INFO:tensorflow:Tensor's key in saved_model's tensor_map: dense_3\n",
+      "INFO:tensorflow: tensor name: StatefulPartitionedCall:0, shape: (-1, 14), type: DT_FLOAT\n",
+      "INFO:tensorflow:Restoring parameters from C:\\Users\\hanna\\AppData\\Local\\Temp\\tmpygpluamc\\variables\\variables\n",
+      "WARNING:tensorflow:From C:\\Users\\hanna\\.virtualenvs\\FruitRecognition-0gOXzYKb\\lib\\site-packages\\tensorflow\\lite\\python\\util.py:300: convert_variables_to_constants (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.convert_variables_to_constants`\n",
+      "WARNING:tensorflow:From C:\\Users\\hanna\\.virtualenvs\\FruitRecognition-0gOXzYKb\\lib\\site-packages\\tensorflow\\python\\framework\\convert_to_constants.py:857: extract_sub_graph (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.extract_sub_graph`\n"
      ]
     }
    ],
    "source": [
     "# Convert the model.\r\n",
-    "converter = tf.compat.v1.lite.TFLiteConverter.from_keras_model_file('fruit26.h5')\r\n",
+    "converter = tf.compat.v1.lite.TFLiteConverter.from_keras_model_file('fruitA.h5')\r\n",
     "tflite_model = converter.convert()\r\n",
     "\r\n",
     "# Save the model.\r\n",
-    "with open('model26.tflite', 'wb') as f:\r\n",
+    "with open('modelA.tflite', 'wb') as f:\r\n",
     "  f.write(tflite_model)\r\n",
     "\r\n",
     "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save(\"historiaA.txt\",fruit_model.history)\r\n",
+    "\r\n",
+    "with open(\"historiaA.txt\",'w') as f:\r\n",
+    "    for k in fruit_model.history.keys():\r\n",
+    "        print(k,file=f)\r\n",
+    "        for i in fruit_model.history[k]:\r\n",
+    "            print(i,file=f)"
    ]
   },
   {
